--- a/backend/apps/sanatorium/templates/sanatorium/procedure_specs/snippets/navbar.html
+++ b/backend/apps/sanatorium/templates/sanatorium/procedure_specs/snippets/navbar.html
@@ -23,6 +23,9 @@
                 <li class="nav-item">
                     <a href="#" class="nav-link">События</a>
                 </li>
+                <li class="nav-item">
+                    <a href="{% url 'sanatorium_procedure_specs:all_procedures' %}" class="nav-link">Все задачи</a>
+                </li>
             </ul>
 
             <!-- SEARCH FORM -->
