--- a/backend/apps/logus/templates/logus/snippets/navbar.html
+++ b/backend/apps/logus/templates/logus/snippets/navbar.html
@@ -30,7 +30,7 @@
                     <a href="{% url 'logus_booking:check-out' %}" class="nav-link">Ожидаемый выезд</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">Неоплаченные</a>
+                    <a href="{% url 'logus_payment:debtors_list' %}" class="nav-link">Неоплаченные</a>
                 </li>
                 <li class="nav-item">
                     <a href="{% url 'logus_registration:available-rooms' %}" class="nav-link">Наличие комнат</a>
