--- a/backend/apps/logus/templates/logus/create_booking.html
+++ b/backend/apps/logus/templates/logus/create_booking.html
@@ -205,6 +205,11 @@
                                                id="example_phone_nm" placeholder="+998901002030">
                                     </div>
                                     <div class="form-group">
+                                        <label for="example_fname">ПИНФЛ</label>
+                                        <input name="INN" type="text" class="form-control" id="example_inn"
+                                               placeholder="123456789">
+                                    </div>
+                                    <div class="form-group">
                                         <label for="example_phone_nm">Адрес</label>
                                         <input name="address" type="text" class="form-control " id="example_address"
                                                placeholder="Ташкентская область, Кибрайский район, городской посёлок Салар, улица Гулимамур, 5/1">
