Add sick leave field to booking form and optimize pagination
Introduce a `is_sick_leave` field to the booking form and include it in the UI for user input. Refactor views to centralize pagination logic with a new `paginate_page` helper function, improving maintainability and consistency.

--- a/backend/apps/logus/templates/logus/create_booking.html
+++ b/backend/apps/logus/templates/logus/create_booking.html
@@ -158,6 +158,29 @@
                                         <!-- /.col -->
                                     </div>
 
+                                    <div class="row">
+                                        <div class="col-12 col-sm-6">
+                                            <div class="form-group">
+                                                <div class="form-check">
+                                                  <input
+                                                    name="is_sick_leave"
+                                                    class="form-check-input"
+                                                    type="checkbox"
+                                                    id="flexCheckDefault"
+                                                  />
+                                                  <label
+                                                    class="form-check-label"
+                                                    for="flexCheckDefault"
+                                                  >
+                                                    Больниычный
+                                                  </label>
+                                                </div>
+                                            </div>
+                                            <!-- /.form-group -->
+                                        </div>
+                                        <!-- /.col -->
+                                    </div>
+
                                     <button class="btn btn-primary" type="submit">Забронировать</button>
                                 </form>
                                 <!-- /.row -->
